force-app/main/default/objects/Opportunity/fields/FQS_Grant_Deadline__c.field-meta.xml
<CustomField>
    <fullName>FQS_Grant_Deadline__c</fullName>
    <description>Distinct from `CloseDate` (anticipated award decision date). Populated on Grant-type Opportunities during the LOI / Proposal stages.</description>
    <inlineHelpText>The deadline to submit this grant application or report to the funder.</inlineHelpText>
    <label>Grant Deadline</label>
    <type>Date</type>
</CustomField>