force-app/main/default/objects/Opportunity/fields/FQS_Grant_Report_Due__c.field-meta.xml
<CustomField>
    <fullName>FQS_Grant_Report_Due__c</fullName>
    <description>Populated post-Awarded for grants with reporting requirements. Drives grant-stewardship reminders.</description>
    <inlineHelpText>When the grant report (progress or final) must be submitted to the funder after the award.</inlineHelpText>
    <label>Grant Report Due</label>
    <type>Date</type>
</CustomField>