force-app/main/default/objects/Opportunity/fields/FQS_Solicitation_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Solicitation_Date__c</fullName>
    <description>Date the major gift ask was formally made to the donor.</description>
    <inlineHelpText>The date on which the formal ask was presented to the donor. Used for pipeline tracking and time-to-close analysis.</inlineHelpText>
    <label>Solicitation Date</label>
    <type>Date</type>
</CustomField>