force-app/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <businessProcess>FQS_Opportunity_Process</businessProcess>
    <description>Tracks a grant application and its lifecycle from identification through award or decline.</description>
    <label>Grant</label>
</RecordType>