force-app/main/default/objects/Opportunity/recordTypes/Major_Gift.recordType-meta.xml
<RecordType>
    <fullName>Major_Gift</fullName>
    <active>true</active>
    <businessProcess>FQS_Major_Gift_Process</businessProcess>
    <description>Major-gift cultivation for individuals and households above the org&apos;s major-gift threshold.</description>
    <label>Major Gift</label>
</RecordType>