force-app/main/default/objects/Opportunity/listViews/FQS_Awarded_Grants.listView-meta.xml
<ListView>
    <fullName>FQS_Awarded_Grants</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Awarded</value>
    </filters>
    <label>Awarded Grants</label>
</ListView>