force-app/main/default/objects/Opportunity/listViews/FQS_Major_Gifts_Closing_30.listView-meta.xml
<ListView>
    <fullName>FQS_Major_Gifts_Closing_30</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Cultivation,Solicitation,Verbal Commitment,Pledged</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>FQS Major Gifts — Closing Next 30</label>
    <sharedTo>
        <group>FQS_Fundraisers</group>
    </sharedTo>
</ListView>