force-app/main/default/objects/Opportunity/listViews/FQS_Major_Gifts_Stale.listView-meta.xml
<ListView>
    <fullName>FQS_Major_Gifts_Stale</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Cultivation,Solicitation,Verbal Commitment,Pledged</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:21</value>
    </filters>
    <label>Major Gifts — Stale 21+ Days</label>
    <sharedTo>
        <group>FQS_Fundraisers</group>
    </sharedTo>
</ListView>