force-app/main/default/objects/Opportunity/listViews/FQS_Pledged_Major_Gifts.listView-meta.xml
<ListView>
    <fullName>FQS_Pledged_Major_Gifts</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Pledged</value>
    </filters>
    <label>Pledged Major Gifts</label>
</ListView>